--- a/index.html
+++ b/index.html
@@ -362,8 +362,8 @@
                     <p>Experience the best pickles made with love and tradition. Order now and enjoy the burst of flavors!</p>
                     <br>
                     <p>Email: fdp.pickleparadise@gmail.com</p>
-                    <p>Phone: +91 7075087718</p>
-                    <p>Website: fdppickleparadise.com</p>
+                    <p>Phone: +91 7095977186</p>
+                    <p>Website:https://celebrated-sopapillas-64bb04.netlify.app/</p>
                 </div>
                 <div class="col-2 col-xs-12">
                     <h1>
